fix issue with margin bottom on mobile devices

--- a/source/stylesheets/partials/_events.scss
+++ b/source/stylesheets/partials/_events.scss
@@ -11,6 +11,8 @@ div.wrapper {
   }
 
   section.events {
+    margin-bottom: em(24);
+    padding-bottom: em(24);
     @include media($medium-screen){
       @include span-columns(8);
       margin-top: em(36);
